Correct iPhone image viewer on iPhone

--- a/css/site.css
+++ b/css/site.css
@@ -81,3 +81,19 @@ div.thumbnail h6 {
 .footer {
   text-align:center;
 }
+
+@media (max-width: 767px) {
+  #sidebar .sidebar-iphone-block {
+    position: relative;
+    width: 380px;
+    display:block;
+    margin-left:auto;
+    margin-right:auto;
+  }
+}
+
+@media (max-width: 480px) {
+  #sidebar .sidebar-iphone-block {
+    width:240px;
+  }
+}
